# mandarin_data

./: .gitignore  LICENSE  README.md  pyproject.toml
01_metro_stations/: 01_explore_shanghai_stations.ipynb  02_beijing.ipynb  03_wikipedia_scrape_all.ipynb  shanghai_stations.csv
02_audio_generation/: 01_explore.ipynb  02_audio_from_sheet.ipynb  02_audio_recordings.ipynb  02_youtube_video_generate.ipynb  02b_audio_components.ipynb  03_video_from_article.ipynb  03_video_generation.ipynb  04_audio_recordings_many.ipynb  05_audio_from_list.ipynb  constants.py  utils_audio.py  utils_data.py  utils_video.py
02_audio_generation/video_file_configs/: a001_first_refresh.py  a002_second_refresh.py  v002_animals_vocab_breakdown.py  v003_one_character_vocab_person.py  v004_one_character_vocab_big.py  v005_one_hundred_words.py  v005_one_hundred_words_six_minutes.py  v006_Mario.py
flashcards/: maps.tsv  menus.tsv
