[tool.poetry]
name = "mandarin-data"
version = "0.1.0"
description = ""
authors = ["scott"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
scipy = "^1.14.1"
jupyter = "^1.1.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
